--- a/src/main/res/drawable/title_bar_bg.xml
+++ b/src/main/res/drawable/title_bar_bg.xml
@@ -18,7 +18,7 @@
     <item
         android:bottom="1dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@android:color/white"/>
+            <solid android:color="@color/title_bar_color"/>
         </shape>
     </item>
 </layer-list>
