--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
     <color name="color_333333">#333333</color>
     <color name="color_e5e5e5">#e5e5e5</color>
+    <color name="title_bar_color">#9966cc</color>
+    <color name="status_bar_color">#9966cc</color>
+    <color name="Transparency">#00000000</color>
+    <color name="Translucence">#33000000</color>
 </resources>
