--- a/src/main/res/layout/title_bar_view.xml
+++ b/src/main/res/layout/title_bar_view.xml
@@ -39,14 +39,13 @@
             <TextView
                 android:id="@+id/title_mid_tv"
                 style="@style/TitleTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                app:layout_constraintHorizontal_weight="1"
                 android:layout_height="match_parent"
                 android:background="?android:attr/selectableItemBackground"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
                 android:layout_centerInParent="true"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/title_left_ll"
+                app:layout_constraintEnd_toStartOf="@id/title_right_ll"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
