--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="color_333333">#333333</color>
     <color name="color_e5e5e5">#e5e5e5</color>
-    <color name="title_bar_color">#9966cc</color>
-    <color name="status_bar_color">#9966cc</color>
+    <color name="title_bar_color">#9C00FC</color>
+    <color name="status_bar_color">#9C00FC</color>
     <color name="Transparency">#00000000</color>
     <color name="Translucence">#33000000</color>
 </resources>
