--- a/src/main/res/layout/activity_choose_file.xml
+++ b/src/main/res/layout/activity_choose_file.xml
@@ -26,7 +26,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:background="?attr/selectableItemBackground"
                 android:padding="15dp"
-                android:src="@mipmap/ic_back" />
+                android:src="@drawable/ic_back" />
 
 
             <TextView
