--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="status_bar_color">#9C00FC</color>
     <color name="Transparency">#00000000</color>
     <color name="Translucence">#33000000</color>
+    <color name="gray">#888888</color>
 
 
     <color name="colorPrimary">#9C00FC</color>
