--- a/src/main/res/layout/title_bar_view.xml
+++ b/src/main/res/layout/title_bar_view.xml
@@ -19,8 +19,7 @@
             android:background="?android:attr/selectableItemBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            >
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/title_left_img"
@@ -67,20 +66,20 @@
 
         <LinearLayout
             android:id="@+id/title_right_ll"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical|end"
             android:orientation="horizontal"
-            android:paddingStart="15dp"
+            android:padding="10dp"
             android:background="?android:attr/selectableItemBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/title_mid_tv">
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/title_right_tv"
                 style="@style/TitleTextView"
+                android:gravity="end"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:visibility="invisible" />
