--- a/src/main/res/values/attrs.xml
+++ b/src/main/res/values/attrs.xml
@@ -19,14 +19,27 @@
     </declare-styleable>
 
     <declare-styleable name="SubmitBtn">
-        <attr name="Text" format="reference|string"/>
-        <attr name="TextColor" format="reference|color"/>
-        <attr name="BackgroundColor" format="reference|color"/>
-        <attr name="TextSize" format="reference|dimension"/>
-        <attr name="LoadingColor" format="reference|color"/>
-        <attr name="FailColor" format="reference|color"/>
-        <attr name="SuccessColor" format="reference|color"/>
-        <attr name="SuccessHint" format="reference|string"/>
-        <attr name="FailHint" format="reference|string"/>
+        <attr name="Text" format="reference|string" />
+        <attr name="TextColor" format="reference|color" />
+        <attr name="BackgroundColor" format="reference|color" />
+        <attr name="TextSize" format="reference|dimension" />
+        <attr name="LoadingColor" format="reference|color" />
+        <attr name="FailColor" format="reference|color" />
+        <attr name="SuccessColor" format="reference|color" />
+        <attr name="SuccessHint" format="reference|string" />
+        <attr name="FailHint" format="reference|string" />
     </declare-styleable>
+
+
+    <declare-styleable name="ProgressView">
+        <attr name="bgColor" format="reference|color" />
+        <attr name="fgColor" format="reference|color" />
+        <attr name="type" format="enum">
+            <enum name="Circle" value="1" />
+            <enum name="Line" value="2" />
+        </attr>
+        <attr name="paintWidth" format="integer|dimension" />
+    </declare-styleable>
+
+
 </resources>
